@@ -1,3 +1,8 @@
+2000-11-22  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* Fixed bug in complex image overview generation (core/overview.cpp).
+	The complex overview images were corrupt.
+
 2000-11-16  Frank Warmerdam  <warmerda@cs46980-c>
 
 	* Moved GXF driver down in driver order (in GDALAllRegister()).
